# Clinical-Deep-Research_CDR

./: .env.example  .gitignore  ARCHITECTURE.md  CASE_STUDY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  EVAL.md  INCIDENTS.md  ISSUES_SEED.md  LAUNCH.md  LICENSE  LLM_PROVIDER_SETUP.md  Makefile  README.md  RELEASE_CRITERIA.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md
.github/workflows/: ci.yml  online-canary.yml
docs/: online_run_notes.md  openapi.json  publication_manifest.md  report_anatomy.md
docs/adr/: ADR-002-SOTA-Grade-Corrections.md  ADR-003-Audit-Corrections-v2.md  ADR-004-Audit-Corrections-v3.md  ADR-005-PostChange-Audit-Corrections.md
docs/contracts/: pipeline_contracts.md
eval/: __init__.py  eval_runner.py
eval/datasets/: golden_set_toy.json
eval/results/: baseline_v0_1.json  baseline_v0_1.md
examples/: evaluate.py  inspect_report.py  run_query.py
examples/output/: sample_report.json  sample_report.md
schemas/: report.schema.json
scripts/: export_openapi.py  generate_demo.py  generate_figures.py  online_canary.py  run_audit_verification.py  run_online_demo.py  run_real_export.py
src/cdr/: __init__.py  config.py
src/cdr/api/: __init__.py  routes.py
src/cdr/composition/: __init__.py  composer.py  schemas.py
src/cdr/core/: __init__.py  enums.py  exceptions.py  schemas.py
src/cdr/evaluation/: __init__.py  golden_set.py  metrics.py  semantic_harness.py
src/cdr/extraction/: __init__.py  extractor.py
src/cdr/interface/: __init__.py  question_parser.py  search_planner.py
src/cdr/llm/: __init__.py  anthropic_provider.py  base.py  cerebras_provider.py  cloudflare_provider.py  factory.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  openai_provider.py  openrouter_provider.py  structured_outputs.py
src/cdr/observability/: __init__.py  metrics.py  tracer.py
src/cdr/orchestration/: __init__.py  graph.py
src/cdr/parsing/: __init__.py  parser.py
src/cdr/publisher/: __init__.py  publisher.py
src/cdr/retrieval/: __init__.py  bm25.py  ct_client.py  embedder.py  fulltext_client.py  pubmed_client.py  qdrant_store.py  reranker.py
src/cdr/rob2/: __init__.py  assessor.py  robins_i_assessor.py
src/cdr/screening/: __init__.py  screener.py
src/cdr/skeptic/: __init__.py  skeptic_agent.py
src/cdr/storage/: __init__.py  artifact_store.py  cache.py  run_store.py
src/cdr/synthesis/: __init__.py  synthesizer.py
src/cdr/verification/: __init__.py  assertion_gate.py  clinical_validation_suite.py  conclusion_enforcer.py  dod3_enforcement.py  dod3_gates.py  dod3_harness.py  evidence_gates.py  publishable_controls.py  publishable_harness.py  verifier.py
tests/: conftest.py  test_api_integration.py  test_composition.py  test_composition_quality.py  test_contract_conformity.py  test_dod3_enforcement.py  test_dod3_gates.py  test_e2e_api_flow.py  test_evaluation.py  test_evidence_gates.py  test_hybrid_retrieval.py  test_message_normalization.py  test_openapi_spec.py  test_prisma_s.py  test_publisher.py  test_publisher_sync.py  test_remediation_v2.py  test_retrieval.py  test_robins_i.py  test_run_store.py  test_runner_persistence.py  test_synthesis.py  test_verification.py
tests/fixtures/: regression_dataset.json
tests/unit/: test_schemas.py
ui/: Dockerfile  README.md  e2e-server.cjs  index.html  package-lock.json  package.json  playwright.ci.config.ts  playwright.config.ts  tailwind.config.js  vite.config.ts
ui/e2e/: evidence-first-artifact.spec.ts  smoke.spec.ts  traceability.spec.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts  transformers.ts
ui/src/pages/: ClaimDetail.tsx  Dashboard.tsx  (+2 more)
(+39 files in other folders)
