[project]
name = "cdr"
version = "0.1.0"
description = "Clinical Deep Research - Evidence-based medical research assistant with full traceability"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "DeepRatAI Team" }]
keywords = ["clinical", "research", "evidence-based", "rag", "medical", "pubmed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    
    # Retrieval - Sparse
    "rank-bm25>=0.2.2",
    
    # Retrieval - Dense
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.9.0",
    
    # Retrieval - Reranking
    "transformers>=4.40.0",
    
    # Parsing
    "pymupdf>=1.24.0",
    "unstructured>=0.14.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    
    # Extraction
    "dspy-ai>=2.5.0",
    
    # LLM Providers
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    
    # HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0",
    
    # PDF Export
    "weasyprint>=62.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "respx>=0.21.0",  # HTTP mocking
    "nest-asyncio>=1.6.0",  # For running async code in nested loops (LOW-F5)
    "matplotlib>=3.8.0",  # Evaluation charts (make figures)
    "jsonschema>=4.20.0",  # Schema validation (make demo, tests)
]

eval = [
    "ragas>=0.1.10",
]

local-llm = [
    "vllm>=0.4.0;platform_system=='Linux'",
    "llama-cpp-python>=0.2.70",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cdr"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["cdr"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests"]

[tool.mypy.overrides]
module = [
    "rank_bm25.*",
    "sentence_transformers.*",
    "dspy.*",
    "unstructured.*",
    "ragas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "golden: golden set tests requiring full system",
    "integration: integration tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/cdr"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
